# telegram_history_meilisearch

./: .env.example  .env.userbot  .gitignore  FOLLOWME.md  README.md  config.ini  config.ini.example  docker-compose.yml  main.py  pyproject.toml  requirements.txt  whitelist.json  whitelist.json.example
api/: README.md  dependencies.py  main.py
api/routers/: cache.py  dialogs.py  search.py  whitelist.py
config/: .env.userbot.example
core/: async_task_manager.py  config_manager.py  meilisearch_service.py  models.py  shutdown_manager.py
docs/: DEVELOPMENT_GUIDE.md
frontend/: .env.example  .gitignore  Dockerfile  index.html  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: FilterControls.jsx  ResultItem.jsx  ResultsList.jsx  SearchBar.jsx  SessionSearchBar.jsx
frontend/src/hooks/: useTelegramSDK.js  useTheme.js
frontend/src/services/: api.js
memory-bank/: FOLLOWME.md  PLAN.md  activeContext.md  decisionLog.md  productContext.md  progress.md
search_bot/: bot.py  cache_service.py  callback_query_handlers.py  command_handlers.py  dialogs_cache_service.py  message_formatters.py
tests/integration/: test_meilisearch_service.py  test_search_api.py  test_whitelist_api.py
tests/unit/: test_callback_query_handlers.py  test_command_handlers.py  test_command_handlers_filters.py  test_config_manager.py  test_history_syncer.py  test_message_formatters.py  test_models.py  test_user_bot_client.py
user_bot/: __init__.py  avatar_service.py  client.py  event_handlers.py  history_syncer.py  utils.py
(+19 files in other folders)
