[project]
name = "sync-all"
version = "0.1.0"
description = "Telegram历史记录同步到MeiliSearch的工具"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "telethon>=1.28.0",
    "meilisearch>=0.21.0",
    "fastapi>=0.100.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.23.0",
    "cachetools>=5.0.0",
    "python-dateutil>=2.8.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0"
]
